footer styling started and fix bug with z-index

--- a/practice-for-week-07-pixel-perfect/stylesheets/global.css
+++ b/practice-for-week-07-pixel-perfect/stylesheets/global.css
@@ -10,7 +10,7 @@ body {
     font-family: 'National', 'Helvetica', 'Arial', sans-serif;
 }
 
-body * {
+body > * {
     max-width: 1200px;
     margin: auto;
 }
