--- a/practice-for-week-07-pixel-perfect/stylesheets/sign-up-banner.css
+++ b/practice-for-week-07-pixel-perfect/stylesheets/sign-up-banner.css
@@ -6,7 +6,7 @@
     text-align: center;
     /* padding: 23px 0px; */
     position: relative;
-    z-index: -2;
+    z-index: 0;
 }
 
 .sign-up-banner * {
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 1200px;
 }
 
 .sign-up-banner h2 {
@@ -79,5 +80,5 @@
     bottom: -8px;
     right: 20px;
     margin: 0px;
-    z-index: -1;
+    z-index: 1;
 }
